--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,18 @@
-dd:
+language: node_js
+node_js:
+- 6
+before_install:
 - openssl aes-256-cbc -K $encrypted_d6c7aa5064d7_key -iv $encrypted_d6c7aa5064d7_iv
-  -in id_rsa.enc -out ~\/.ssh/id_rsa -d
+  -in tools/deploy/id_rsa.enc -out ~/.ssh/id_rsa -d
+- chmod 600 ~/.ssh/id_rsa
+- eval $(ssh-agent)
+- ssh-add ~/.ssh/id_rsa
+before_script:
+- mv -fv tools/deploy/ssh_config ~/.ssh/config
+script:
+- git remote add deploy root@spreadsheet:/usr/local/codelib/sunbeam-front.git
+- git push deploy $TRAVIS_BRANCH
+cache:
+  directories:
+  - node_modules
+dist: "precise"
