--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
 before_script:
 - mv -fv tools/deploy/ssh_config ~/.ssh/config
 script:
+- npm install
 - git remote add deploy root@sunbeam:/usr/local/codelib/sunbeam-front.git
 - git push deploy $TRAVIS_BRANCH
 cache:
