--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,9 @@ before_script:
 - mv -fv tools/deploy/ssh_config ~/.ssh/config
 - cat /home/travis/.ssh/config
 script:
-- git remote add deploy root@sunbeam:/usr/local/codelib/sunbeam-front.git
+- git remote add deploy root@spreadsheet:/usr/local/codelib/sunbeam-front.git
 - git push deploy $TRAVIS_BRANCH
 cache:
   directories:
   - node_modules
+dist: "precise",
