--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Online Spreadsheet for Web",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open --config webpack.dev.js"
+    "dev": "webpack-dev-server --open --config webpack.dev.js",
+    "server": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
+    "express": "^4.16.2",
     "html-webpack-plugin": "^2.30.1",
     "less-loader": "^4.0.5",
     "style-loader": "^0.20.1",
@@ -40,6 +42,7 @@
     "vue-loader": "^13.7.0",
     "vuex": "^3.0.1",
     "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^2.0.4",
     "webpack-dev-server": "^2.11.1"
   }
 }
