--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "uglifyjs-webpack-plugin": "^1.1.6",
     "vue": "^2.5.13",
     "vue-loader": "^13.7.0",
+    "vue-template-compiler": "^2.5.13",
     "vuex": "^3.0.1",
     "webpack": "^3.10.0",
     "webpack-dev-middleware": "^2.0.4",
