--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "type": "git",
     "url": "git+https://github.com/iCloudWorkGroup/Sunbeam-front.git"
   },
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/iCloudWorkGroup/Sunbeam-front/issues"
   },
   "homepage": "https://github.com/iCloudWorkGroup/Sunbeam-front#readme",
+  "dependencies":{
+    "vue": "^2.5.13",
+    "vuex": "^3.0.1",
+    "axios": "^0.17.1"
+  },
   "devDependencies": {
-    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
@@ -33,15 +35,14 @@
     "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
+
     "express": "^4.16.2",
     "html-webpack-plugin": "^2.30.1",
     "less-loader": "^4.0.5",
     "style-loader": "^0.20.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
-    "vue": "^2.5.13",
     "vue-loader": "^13.7.0",
     "vue-template-compiler": "^2.5.13",
-    "vuex": "^3.0.1",
     "webpack": "^3.10.0",
     "webpack-dev-middleware": "^2.0.4",
     "webpack-dev-server": "^2.11.1"
