--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,15 @@
 {
 	"presets": [
-      "es2015"
-    ]
+      	"es2015",
+    ],
+    "plugins": [[
+		"transform-runtime",
+		{
+			"helpers": false,
+			"polyfill": false,
+			"regenerator":true,
+			"moduleName": 
+			"babel-runtime"
+		}
+	]]
 }
