--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "https://github.com/iCloudWorkGroup/Sunbeam-front/issues"
   },
   "homepage": "https://github.com/iCloudWorkGroup/Sunbeam-front#readme",
-  "dependencies":{
+  "dependencies": {
     "vue": "^2.5.13",
     "vuex": "^3.0.1",
     "axios": "^0.17.1"
@@ -24,6 +24,8 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.9",
     "eslint": "^4.16.0",
@@ -35,7 +37,6 @@
     "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-
     "express": "^4.16.2",
     "html-webpack-plugin": "^2.30.1",
     "less-loader": "^4.0.5",
