--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "express": "^4.16.2",
     "html-webpack-plugin": "^2.30.1",
+    "jquery": "^3.3.1",
     "less-loader": "^4.0.5",
     "style-loader": "^0.20.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
