--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,9 @@
 {
-	"presets": [
-      	"es2015",
-    ],
-    "plugins": [[
-		"transform-runtime",
-		{
-			"helpers": false,
-			"polyfill": false,
-			"regenerator":true,
-			"moduleName": 
-			"babel-runtime"
-		}
-	]]
+	"presets": ["env"],
+	"plugins": ["transform-object-rest-spread",["transform-runtime",{
+		"helpers": false,
+      	"polyfill": false,
+		"regenerator": true,
+		"moduleName": "babel-runtime"
+	}]]
 }
