--- a/package.json
+++ b/package.json
@@ -1,52 +1,54 @@
 {
-  "name": "sunbeam-front",
-  "version": "1.0.0",
-  "description": "Online Spreadsheet for Web",
-  "main": "index.js",
+  "name": "todomvc-beta",
   "scripts": {
-    "dev": "webpack-dev-server --open --config webpack.dev.js",
-    "server": "node server.js"
+    "dev": "node dev-server.js",
+    "weex": "webpack --config webpack.weex.js",
+    "built": "webpack --config webpack.prod.js && node prod-server.js",
+    "test:e2e": "node test/e2e/runner.js",
+    "test:unit": "karma start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/iCloudWorkGroup/Sunbeam-front.git"
-  },
-  "bugs": {
-    "url": "https://github.com/iCloudWorkGroup/Sunbeam-front/issues"
-  },
-  "homepage": "https://github.com/iCloudWorkGroup/Sunbeam-front#readme",
+  "peerDependencies": {},
   "dependencies": {
-    "vue": "^2.5.13",
-    "vuex": "^3.0.1",
-    "axios": "^0.17.1"
+    "babel-runtime": "^6.26.0",
+    "vue": "2.4.4",
+    "vuex": "2.4.0",
+    "axios": "^0.17.1",
+    "jquery": "^3.3.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^0.28.9",
-    "eslint": "^4.16.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^4.0.2",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^6.0.0",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "express": "^4.16.2",
+    "babel-preset-env": "1.5.1",
+    "chromedriver": "^2.27.2",
+    "clean-webpack-plugin": "^0.1.17",
+    "cross-spawn": "^5.0.1",
+    "css-loader": "^0.28.7",
+    "express": "^4.15.4",
     "html-webpack-plugin": "^2.30.1",
-    "jquery": "^3.3.1",
-    "less-loader": "^4.0.5",
-    "style-loader": "^0.20.1",
-    "uglifyjs-webpack-plugin": "^1.1.6",
-    "vue-loader": "^13.7.0",
-    "vue-template-compiler": "^2.5.13",
-    "webpack": "^3.10.0",
-    "webpack-dev-middleware": "^2.0.4",
-    "webpack-dev-server": "^2.11.1"
+    "inject-loader": "^3.0.1",
+    "istanbul-instrumenter-loader": "3.0.0",
+    "jasmine": "2.8.0",
+    "jasmine-core": "2.8.0",
+    "karma": "1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-coverage-istanbul-reporter": "1.3.0",
+    "karma-jasmine": "1.1.0",
+    "karma-phantomjs-launcher": "1.0.4",
+    "karma-webpack": "2.0.5",
+    "nightwatch": "^0.9.12",
+    "nightwatch-helpers": "^1.2.0",
+    "selenium-server": "^2.53.1",
+    "style-loader": "^0.20.3",
+    "uglifyjs-webpack-plugin": "^1.1.4",
+    "vue-loader": "13.0.5",
+    "vue-router": "3.0.1",
+    "vue-template-compiler": "2.4.4",
+    "webpack": "^3.6.0",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.19.1",
+    "webpack-merge": "^4.1.1"
   }
 }
