--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "weex": "webpack --config webpack.weex.js",
     "built": "webpack --config webpack.prod.js && node prod-server.js",
     "test:e2e": "node test/e2e/runner.js",
-    "test:unit": "karma start"
+    "test": "karma start"
   },
   "peerDependencies": {},
   "dependencies": {
@@ -18,37 +18,45 @@
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
+    "babel-plugin-istanbul": "^4.1.6",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "1.5.1",
-
+    "chai": "^4.1.2",
     "chromedriver": "^2.27.2",
     "clean-webpack-plugin": "^0.1.17",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.7",
     "express": "^4.15.4",
+    "generator-karma": "^2.0.1",
     "html-webpack-plugin": "^2.30.1",
     "inject-loader": "^3.0.1",
     "istanbul-instrumenter-loader": "3.0.0",
-    "jasmine": "2.8.0",
-    "jasmine-core": "2.8.0",
-    
-    "karma": "1.7.1",
+    "jasmine": "^2.8.0",
+    "jasmine-core": "^2.99.1",
+    "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
-    "karma-coverage-istanbul-reporter": "1.3.0",
-    "karma-jasmine": "1.1.0",
-    "karma-phantomjs-launcher": "1.0.4",
-    "karma-webpack": "2.0.5",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
+    "karma-jasmine": "^1.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sinon-chai": "^1.3.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^2.0.13",
+    "mocha": "^5.1.1",
     "nightwatch": "^0.9.12",
     "nightwatch-helpers": "^1.2.0",
+    "phantomjs-prebuilt": "^2.1.16",
     "selenium-server": "^2.53.1",
+    "sinon": "^4.5.0",
+    "sinon-chai": "^3.0.0",
     "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.1.4",
     "vue-loader": "13.0.5",
     "vue-router": "3.0.1",
     "vue-template-compiler": "2.4.4",
-
     "webpack": "^3.6.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1",
