fix(other): 强行与本地库同步
因为CI与本地库不同步，所以需要强行同步一次

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
 - cat /home/travis/.ssh/config
 script:
 - git remote add deploy root@sunbeam:/usr/local/codelib/sunbeam-front.git
-- git push deploy $TRAVIS_BRANCH
+- git push deploy $TRAVIS_BRANCH --force
 cache:
   directories:
   - node_modules
