fix(other): 修复由于ci系统变化造成项目代码结构错误

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,10 @@ before_install:
 before_script:
 - mv -fv tools/deploy/ssh_config ~/.ssh/config
 - cat /home/travis/.ssh/config
+- git checkout -qf master
 script:
 - git remote add deploy root@sunbeam:/usr/local/codelib/sunbeam-front.git
-- git push --force deploy $TRAVIS_BRANCH
+- git push deploy $TRAVIS_BRANCH
 cache:
   directories:
   - node_modules
