--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "vue": "2.4.4",
-    "vuex": "2.4.0",
     "axios": "^0.17.1",
     "jquery": "^3.3.1"
   },
@@ -58,6 +57,7 @@
     "vue-loader": "13.0.5",
     "vue-router": "3.0.1",
     "vue-template-compiler": "2.4.4",
+    "vuex": "^3.0.1",
     "webpack": "^3.6.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1",
